{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 2716,
  "lineage": "d273fc10-6392-a470-7174-0c09ef3bf4b4",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "WP_EC2_APP_AZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:517015374353:instance/i-072e90dcbdae78c4a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-072e90dcbdae78c4a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keypair-az1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0696b1de6c3d00bb3",
            "private_dns": "ip-172-16-0-104.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.0.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f72b8dd5b07fce09",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0397a1e9aba8e3f0a",
            "tags": {
              "Name": "WP-EC2-APP-AZ1"
            },
            "tags_all": {
              "Name": "WP-EC2-APP-AZ1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05b92ad4fdd2e4853"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "module.database.aws_db_instance.WP_RDS_MySQL",
            "module.database.aws_db_subnet_group.WP_RDS_SubnetGroup",
            "module.database.aws_efs_file_system.WP_EFS",
            "module.database.random_password.WP_RDS_password",
            "module.firewall.aws_security_group.Bastion_Host_SG",
            "module.firewall.aws_security_group.WP_ALB_SG",
            "module.firewall.aws_security_group.WP_APP_SG",
            "module.firewall.aws_security_group.WP_RDS_SG",
            "module.network.aws_subnet.WP_Subnets",
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "WP_EC2_APP_AZ2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04fb760becac2c9c0",
            "arn": "arn:aws:ec2:us-east-1:517015374353:instance/i-070a94be27e0715b9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-070a94be27e0715b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keypairaz221",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-084790f83c4902585",
            "private_dns": "ip-172-16-0-134.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.0.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0601cf25761412502",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac89b67dc6240f1a",
            "tags": {
              "Name": "WP-EC2-APP-AZ2"
            },
            "tags_all": {
              "Name": "WP-EC2-APP-AZ2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05b92ad4fdd2e4853"
            ]
          },
          "dependencies": [
            "module.database.aws_db_instance.WP_RDS_MySQL",
            "module.database.aws_db_subnet_group.WP_RDS_SubnetGroup",
            "module.database.aws_efs_file_system.WP_EFS",
            "module.database.random_password.WP_RDS_password",
            "module.ec2.aws_ami_from_instance.WP_AMI_Instances",
            "module.ec2.aws_instance.WP_EC2_APP_AZ1",
            "module.ec2.time_sleep.wait_5_minutes",
            "module.firewall.aws_security_group.Bastion_Host_SG",
            "module.firewall.aws_security_group.WP_ALB_SG",
            "module.firewall.aws_security_group.WP_APP_SG",
            "module.firewall.aws_security_group.WP_RDS_SG",
            "module.network.aws_subnet.WP_Subnets",
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "WP_EC2_bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:517015374353:instance/i-0f539da020a27efc7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f539da020a27efc7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "WP-KeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07ee9718911af3617",
            "private_dns": "ip-172-16-0-91.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.0.91",
            "public_dns": "ec2-54-167-42-232.compute-1.amazonaws.com",
            "public_ip": "54.167.42.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e9c3ef0fe095ed66",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb46a67fcc3e0c4d",
            "tags": {
              "Name": "WP-EC2-bastion-host"
            },
            "tags_all": {
              "Name": "WP-EC2-bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b863e61bd4e66245"
            ]
          },
          "dependencies": [
            "module.firewall.aws_security_group.Bastion_Host_SG",
            "module.network.aws_subnet.WP_Subnets",
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Bastion_Host_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517015374353:security-group/sg-0b863e61bd4e66245",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b863e61bd4e66245",
            "ingress": [
              {
                "cidr_blocks": [
                  "85.250.79.86/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Bastion-Host-SG",
            "name_prefix": "",
            "owner_id": "517015374353",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion-Host-SG"
            },
            "tags_all": {
              "Name": "Bastion-Host-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3a360cc26cc0442"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WP_ALB_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517015374353:security-group/sg-0dabb496e47141974",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dabb496e47141974",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WP-ALB-SG",
            "name_prefix": "",
            "owner_id": "517015374353",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WP-ALB-SG"
            },
            "tags_all": {
              "Name": "WP-ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3a360cc26cc0442"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WP_APP_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517015374353:security-group/sg-05b92ad4fdd2e4853",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b92ad4fdd2e4853",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b863e61bd4e66245"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dabb496e47141974"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dabb496e47141974"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WP-APP-SG",
            "name_prefix": "",
            "owner_id": "517015374353",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WP-APP-SG"
            },
            "tags_all": {
              "Name": "WP-APP-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3a360cc26cc0442"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firewall.aws_security_group.Bastion_Host_SG",
            "module.firewall.aws_security_group.WP_ALB_SG",
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WP_EFS_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517015374353:security-group/sg-0e1185341c742bb2b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1185341c742bb2b",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.96/28",
                  "172.16.0.128/28"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "WP-EFS-SG",
            "name_prefix": "",
            "owner_id": "517015374353",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WP-EFS-SG"
            },
            "tags_all": {
              "Name": "WP-EFS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3a360cc26cc0442"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WP_RDS_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517015374353:security-group/sg-07c23d5a8ce8f7a91",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c23d5a8ce8f7a91",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.96/28",
                  "172.16.0.128/28"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "WP-RDS-SG",
            "name_prefix": "",
            "owner_id": "517015374353",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WP-RDS-SG"
            },
            "tags_all": {
              "Name": "WP-RDS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3a360cc26cc0442"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "WP_ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:517015374353:loadbalancer/app/WP-ALB/7e50ae16cc6e11bf",
            "arn_suffix": "app/WP-ALB/7e50ae16cc6e11bf",
            "desync_mitigation_mode": "defensive",
            "dns_name": "WP-ALB-62624740.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:517015374353:loadbalancer/app/WP-ALB/7e50ae16cc6e11bf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "WP-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dabb496e47141974"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04e4a4f7f87176e73"
              },
              {
                "subnet_id": "subnet-0cb46a67fcc3e0c4d"
              }
            ],
            "subnets": [
              "subnet-04e4a4f7f87176e73",
              "subnet-0cb46a67fcc3e0c4d"
            ],
            "tags": {
              "Name": "WP-ALB"
            },
            "tags_all": {
              "Name": "WP-ALB"
            },
            "vpc_id": "vpc-0e3a360cc26cc0442",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.firewall.aws_security_group.WP_ALB_SG",
            "module.network.aws_subnet.WP_Subnets",
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "WP_ALB_Listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:517015374353:listener/app/WP-ALB/7e50ae16cc6e11bf/3cfa8b7dfc791f99",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:517015374353:targetgroup/WP-ALB/4cfc5a4a0d145292",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:517015374353:listener/app/WP-ALB/7e50ae16cc6e11bf/3cfa8b7dfc791f99",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:517015374353:loadbalancer/app/WP-ALB/7e50ae16cc6e11bf",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firewall.aws_security_group.WP_ALB_SG",
            "module.loadbalancer.aws_lb.WP_ALB",
            "module.loadbalancer.aws_lb_target_group.WP_ALB_Target_Group",
            "module.network.aws_subnet.WP_Subnets",
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "WP_ALB_Target_Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:517015374353:targetgroup/WP-ALB/4cfc5a4a0d145292",
            "arn_suffix": "targetgroup/WP-ALB/4cfc5a4a0d145292",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:517015374353:targetgroup/WP-ALB/4cfc5a4a0d145292",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "WP-ALB",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e3a360cc26cc0442"
          },
          "dependencies": [
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "WP_Instance_AZ1_Attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:517015374353:targetgroup/WP-ALB/4cfc5a4a0d145292-20231111173416575200000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:517015374353:targetgroup/WP-ALB/4cfc5a4a0d145292",
            "target_id": "i-072e90dcbdae78c4a"
          },
          "dependencies": [
            "module.database.aws_db_instance.WP_RDS_MySQL",
            "module.database.aws_db_subnet_group.WP_RDS_SubnetGroup",
            "module.database.aws_efs_file_system.WP_EFS",
            "module.database.random_password.WP_RDS_password",
            "module.ec2.aws_instance.WP_EC2_APP_AZ1",
            "module.firewall.aws_security_group.Bastion_Host_SG",
            "module.firewall.aws_security_group.WP_ALB_SG",
            "module.firewall.aws_security_group.WP_APP_SG",
            "module.firewall.aws_security_group.WP_RDS_SG",
            "module.loadbalancer.aws_lb_target_group.WP_ALB_Target_Group",
            "module.network.aws_subnet.WP_Subnets",
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "WP_Instance_AZ2_Attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:517015374353:targetgroup/WP-ALB/4cfc5a4a0d145292-2023111117430122710000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:517015374353:targetgroup/WP-ALB/4cfc5a4a0d145292",
            "target_id": "i-070a94be27e0715b9"
          },
          "dependencies": [
            "module.database.aws_db_instance.WP_RDS_MySQL",
            "module.database.aws_db_subnet_group.WP_RDS_SubnetGroup",
            "module.database.aws_efs_file_system.WP_EFS",
            "module.database.random_password.WP_RDS_password",
            "module.ec2.aws_ami_from_instance.WP_AMI_Instances",
            "module.ec2.aws_instance.WP_EC2_APP_AZ1",
            "module.ec2.aws_instance.WP_EC2_APP_AZ2",
            "module.ec2.time_sleep.wait_5_minutes",
            "module.firewall.aws_security_group.Bastion_Host_SG",
            "module.firewall.aws_security_group.WP_ALB_SG",
            "module.firewall.aws_security_group.WP_APP_SG",
            "module.firewall.aws_security_group.WP_RDS_SG",
            "module.loadbalancer.aws_lb_target_group.WP_ALB_Target_Group",
            "module.network.aws_subnet.WP_Subnets",
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ElasticIP_AZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-006325bcdd97644fc",
            "domain": "vpc",
            "id": "eipalloc-006325bcdd97644fc",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-225-117-131.compute-1.amazonaws.com",
            "public_ip": "3.225.117.131",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ElasticIP_AZ2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c74113caa747b664",
            "domain": "vpc",
            "id": "eipalloc-0c74113caa747b664",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-225-100-212.compute-1.amazonaws.com",
            "public_ip": "34.225.100.212",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "WP_internetGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517015374353:internet-gateway/igw-03c9dedb4f667a4a9",
            "id": "igw-03c9dedb4f667a4a9",
            "owner_id": "517015374353",
            "tags": {
              "Name": "WP-internetGateway"
            },
            "tags_all": {
              "Name": "WP-internetGateway"
            },
            "vpc_id": "vpc-0e3a360cc26cc0442"
          },
          "dependencies": [
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "WP_NatGateway_AZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-006325bcdd97644fc",
            "association_id": "eipassoc-0d8a4b0aa09d71441",
            "connectivity_type": "public",
            "id": "nat-05913c352a53226ce",
            "network_interface_id": "eni-0c0f48b63cbafbba5",
            "private_ip": "172.16.0.87",
            "public_ip": "3.225.117.131",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cb46a67fcc3e0c4d",
            "tags": {
              "Name": "NATGateway-AZ1"
            },
            "tags_all": {
              "Name": "NATGateway-AZ1"
            }
          },
          "dependencies": [
            "module.network.aws_eip.ElasticIP_AZ1",
            "module.network.aws_subnet.WP_Subnets",
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "WP_NatGateway_AZ2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c74113caa747b664",
            "association_id": "eipassoc-027514d5a1c63feb9",
            "connectivity_type": "public",
            "id": "nat-0d123164185700412",
            "network_interface_id": "eni-0f298dc59d2b97aae",
            "private_ip": "172.16.0.14",
            "public_ip": "34.225.100.212",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04e4a4f7f87176e73",
            "tags": {
              "Name": "NATGateway-AZ2"
            },
            "tags_all": {
              "Name": "NATGateway-AZ2"
            }
          },
          "dependencies": [
            "module.network.aws_eip.ElasticIP_AZ2",
            "module.network.aws_subnet.WP_Subnets",
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "WP_Private_Route_Table_AZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517015374353:route-table/rtb-05893bf17cf0078b8",
            "id": "rtb-05893bf17cf0078b8",
            "owner_id": "517015374353",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-05913c352a53226ce",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "WP-Private-Rote-Table-AZ1"
            },
            "tags_all": {
              "Name": "WP-Private-Rote-Table-AZ1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3a360cc26cc0442"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.ElasticIP_AZ1",
            "module.network.aws_nat_gateway.WP_NatGateway_AZ1",
            "module.network.aws_subnet.WP_Subnets",
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "WP_Private_Route_Table_AZ2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517015374353:route-table/rtb-0917564cce89f1bc0",
            "id": "rtb-0917564cce89f1bc0",
            "owner_id": "517015374353",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d123164185700412",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "WP-Private-Rote-Table-AZ2"
            },
            "tags_all": {
              "Name": "WP-Private-Rote-Table-AZ2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3a360cc26cc0442"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.ElasticIP_AZ2",
            "module.network.aws_nat_gateway.WP_NatGateway_AZ2",
            "module.network.aws_subnet.WP_Subnets",
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "WP_Public_Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517015374353:route-table/rtb-0fa6708431291a7e5",
            "id": "rtb-0fa6708431291a7e5",
            "owner_id": "517015374353",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03c9dedb4f667a4a9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "WP-Public-Rote-Table"
            },
            "tags_all": {
              "Name": "WP-Public-Rote-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3a360cc26cc0442"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.WP_internetGateway",
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_Subnet_APP_Association_AZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbfe65ede3dca630",
            "route_table_id": "rtb-05893bf17cf0078b8",
            "subnet_id": "subnet-0397a1e9aba8e3f0a"
          },
          "dependencies": [
            "module.network.aws_eip.ElasticIP_AZ1",
            "module.network.aws_nat_gateway.WP_NatGateway_AZ1",
            "module.network.aws_route_table.WP_Private_Route_Table_AZ1",
            "module.network.aws_subnet.WP_Subnets",
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_Subnet_APP_Association_AZ2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09abb5c9f6c41e9f3",
            "route_table_id": "rtb-0917564cce89f1bc0",
            "subnet_id": "subnet-0ac89b67dc6240f1a"
          },
          "dependencies": [
            "module.network.aws_eip.ElasticIP_AZ2",
            "module.network.aws_nat_gateway.WP_NatGateway_AZ2",
            "module.network.aws_route_table.WP_Private_Route_Table_AZ2",
            "module.network.aws_subnet.WP_Subnets",
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_Subnet_RDS_Association_AZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02821ceeece36bca2",
            "route_table_id": "rtb-05893bf17cf0078b8",
            "subnet_id": "subnet-005fe933408024966"
          },
          "dependencies": [
            "module.network.aws_eip.ElasticIP_AZ1",
            "module.network.aws_nat_gateway.WP_NatGateway_AZ1",
            "module.network.aws_route_table.WP_Private_Route_Table_AZ1",
            "module.network.aws_subnet.WP_Subnets",
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_Subnet_RDS_Association_AZ2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbc457aca6e5ed6f",
            "route_table_id": "rtb-0917564cce89f1bc0",
            "subnet_id": "subnet-0cb30941c4d13e399"
          },
          "dependencies": [
            "module.network.aws_eip.ElasticIP_AZ2",
            "module.network.aws_nat_gateway.WP_NatGateway_AZ2",
            "module.network.aws_route_table.WP_Private_Route_Table_AZ2",
            "module.network.aws_subnet.WP_Subnets",
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_Subnet_Association_AZ1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0987d126bdd2ece6e",
            "route_table_id": "rtb-0fa6708431291a7e5",
            "subnet_id": "subnet-0cb46a67fcc3e0c4d"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.WP_internetGateway",
            "module.network.aws_route_table.WP_Public_Route_Table",
            "module.network.aws_subnet.WP_Subnets",
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_Subnet_Association_AZ2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0602cbacf824a0089",
            "route_table_id": "rtb-0fa6708431291a7e5",
            "subnet_id": "subnet-04e4a4f7f87176e73"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.WP_internetGateway",
            "module.network.aws_route_table.WP_Public_Route_Table",
            "module.network.aws_subnet.WP_Subnets",
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "WP_Subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "PrivateSubnet1_APP_AZ1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517015374353:subnet/subnet-0397a1e9aba8e3f0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.0.96/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0397a1e9aba8e3f0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517015374353",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet1-APP-AZ1"
            },
            "tags_all": {
              "Name": "PrivateSubnet1-APP-AZ1"
            },
            "vpc_id": "vpc-0e3a360cc26cc0442"
          },
          "dependencies": [
            "module.network.aws_vpc.WP_VPC"
          ]
        },
        {
          "index_key": "PrivateSubnet2_RDS_AZ1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517015374353:subnet/subnet-005fe933408024966",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.0.112/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005fe933408024966",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517015374353",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet2-RDS-AZ1"
            },
            "tags_all": {
              "Name": "PrivateSubnet2-RDS-AZ1"
            },
            "vpc_id": "vpc-0e3a360cc26cc0442"
          },
          "dependencies": [
            "module.network.aws_vpc.WP_VPC"
          ]
        },
        {
          "index_key": "PrivateSubnet3_APP_AZ2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517015374353:subnet/subnet-0ac89b67dc6240f1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.0.128/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac89b67dc6240f1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517015374353",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet3-APP-AZ2"
            },
            "tags_all": {
              "Name": "PrivateSubnet3-APP-AZ2"
            },
            "vpc_id": "vpc-0e3a360cc26cc0442"
          },
          "dependencies": [
            "module.network.aws_vpc.WP_VPC"
          ]
        },
        {
          "index_key": "PrivateSubnet4_RDS_AZ2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517015374353:subnet/subnet-0cb30941c4d13e399",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.0.160/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb30941c4d13e399",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517015374353",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet4-RDS-AZ2"
            },
            "tags_all": {
              "Name": "PrivateSubnet4-RDS-AZ2"
            },
            "vpc_id": "vpc-0e3a360cc26cc0442"
          },
          "dependencies": [
            "module.network.aws_vpc.WP_VPC"
          ]
        },
        {
          "index_key": "PublicSubnet_AZ1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517015374353:subnet/subnet-0cb46a67fcc3e0c4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.0.80/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb46a67fcc3e0c4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517015374353",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-AZ1"
            },
            "tags_all": {
              "Name": "PublicSubnet-AZ1"
            },
            "vpc_id": "vpc-0e3a360cc26cc0442"
          },
          "dependencies": [
            "module.network.aws_vpc.WP_VPC"
          ]
        },
        {
          "index_key": "PublicSubnet_AZ2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517015374353:subnet/subnet-04e4a4f7f87176e73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e4a4f7f87176e73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517015374353",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-AZ2"
            },
            "tags_all": {
              "Name": "PublicSubnet-AZ2"
            },
            "vpc_id": "vpc-0e3a360cc26cc0442"
          },
          "dependencies": [
            "module.network.aws_vpc.WP_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "WP_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517015374353:vpc/vpc-0e3a360cc26cc0442",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/24",
            "default_network_acl_id": "acl-0ad05208e1f5ccc52",
            "default_route_table_id": "rtb-065f5d5302f79da32",
            "default_security_group_id": "sg-0024a02205e6c103a",
            "dhcp_options_id": "dopt-0e11152c5de379ced",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e3a360cc26cc0442",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-065f5d5302f79da32",
            "owner_id": "517015374353",
            "tags": {
              "Name": "WP-VPC"
            },
            "tags_all": {
              "Name": "WP-VPC"
            }
          }
        }
      ]
    }
  ]
}